Update page icon and logo. Updated base params.

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,6 +3,8 @@
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
+i_am_a_sponsor: true
+
 # Appearance
 appearance:
   mode: light
@@ -38,18 +40,18 @@ header:
     logo:
       text: ""
       # Logo filename in `assets/media/` folder
-      filename: "logo.svg"
+      filename: "htejeda-logo.png"
     button:
       enable: true
-      text: "Get Started"
-      url: "https://hugoblox.com/templates/details/docs/"
+      text: "MADLAB"
+      url: "https://steyvers.socsci.uci.edu/madlab/"
     show_search: true
     show_theme_chooser: true
 
 # Site footer
 footer:
   copyright:
-    notice: '© {year} My Company. This work is licensed under {license}'
+    notice: '© {year} Heliodoro Tejeda Lemus'
     license:
       enable: true
       allow_derivatives: false
